rework css variables names and quantity

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -7,7 +7,7 @@
  */
 
 .navbar {
-    background-color: $darkgray;
+    background-color: $mediumstrong;
     border: 0;
     border-radius: 0;
     margin-bottom: 10px;
@@ -47,7 +47,7 @@
 /* search bar in head.php ; nav */
 .big-search {
     background: #555 url('images/search.png') no-repeat scroll right 10px center;
-    border: 1px solid $maingray;
+    border: 1px solid $medium;
     border-radius: 5px;
     color: #fff;
     height: 2em;
