--- a/src/scss/_search-syntax-highlighting.scss
+++ b/src/scss/_search-syntax-highlighting.scss
@@ -9,7 +9,7 @@
 
 #extendedArea {
     background-color: transparent;
-    caret-color: $darkgray;
+    caret-color: $mediumstrong;
     color: transparent;
     position: relative;
     z-index: 1;
