--- a/src/templates/todolist-panel.html
+++ b/src/templates/todolist-panel.html
@@ -28,7 +28,7 @@
     </div>
 
     <!-- Toggle scope User/Team switch -->
-    <div class='d-inline-flex rounded white-border p-1'>
+    <div class='d-inline-flex rounded border-white p-1'>
       <div class='mr-1'>{{ 'User'|trans }}</div>
       <label class='switch'>
         <input type='checkbox' id='todolistStepsShowTeam' autocomplete='off' aria-label='{{ 'Show steps for team'|trans }}'>
