fix create new button in show mode

--- a/src/templates/filter-order-sort.html
+++ b/src/templates/filter-order-sort.html
@@ -67,6 +67,8 @@
     </form>
   </div>
   {% if not searchPage %}
-    {% include 'create-new.html' %}
+    <div class='ml-auto'>
+      {% include 'create-new.html' %}
+    </div>
   {% endif %}
 </div>
