touch up the table in show mode

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -32,8 +32,7 @@
     text-transform: uppercase;
 
     /* blue on hover */
-    &:hover,
-    svg:hover {
+    &:hover {
         color: $elabblue !important;
         transition-duration: 500ms;
     }
