--- a/src/templates/filter-order-sort.html
+++ b/src/templates/filter-order-sort.html
@@ -1,7 +1,7 @@
-<div class='row'>
+<div class='d-flex'>
   {# LEFT MENU: FILTER/ORDER/SORT/LIMIT #}
   {# we hide this menu for small devices #}
-  <div class='col-md-10 hidden-xs {{ searchPage ? 'mt-2' }}'>
+  <div class='d-none d-sm-block {{ searchPage ? 'mt-2' }}'>
     <form>
     <div class='form-group form-inline'>
       {% if not searchPage %}
