--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -92,8 +92,7 @@
     </div>
   </div>
 
-  {# flex-nowrap to avoid going to two lines #}
-  <div class='ml-auto d-flex flex-nowrap'>
+  <div class='ml-auto d-flex'>
     <!-- TOGGLE PIN -->
     <div data-action='toggle-pin' title='{{ 'Toggle pin'|trans }}' id='toggle-pin-icon-div' class='hl-hover-gray p-2 px-3 rounded mr-3'>
       <i id='toggle-pin-icon' class='fas fa-thumbtack {{ Entity.Pins.isPinned ? '' : 'color-weak' }}'></i>
