--- a/src/templates/show-item-table.html
+++ b/src/templates/show-item-table.html
@@ -13,14 +13,14 @@
   <td class='title'>
     {# edit icon #}
     {% if not item.locked and (item.userid == App.Users.userData.userid or Entity.type == 'items' or App.Session.get('is_admin')) %}
-      <span class='p-1 rounded hl-hover-gray'>
-        <a href='{{ Entity.page }}.php?mode=edit&id={{ item.id }}'><i class='fas fa-pencil-alt clickable link-like'></i></a>
-      </span>
+      <span class='p-2 rounded hl-hover-gray'><a href='{{ Entity.page }}.php?mode=edit&id={{ item.id }}'><i class='fas fa-pencil-alt clickable link-like'></i></a></span>
     {% endif %}
     {# lock icon #}
     {% if item.locked %}
       <i class='fas fa-lock fa-sm' style='color:#29AEB9'></i>
     {% endif %}
+    {# toggle body #}
+    <span class='p-2 rounded hl-hover-gray' data-type='{{ Entity.type }}' data-id='{{ item.id }}' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}'><i class='fas fa-square-plus fa-fw link-like'></i></span>
     <a href='{{ Entity.page }}.php?mode=view&id={{ item.id }}'>{{ item.title|raw }}</a>
   </td>
 
@@ -53,14 +53,6 @@
         {% endfor %}
       </span>
   {% endif %}
-  </td>
-
-  {# ACTIONS #}
-  <td class='one-line'>
-    {# toggle body #}
-    <span data-type='{{ Entity.type }}' data-id='{{ item.id }}' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}'>
-      <i class='fas fa-square-plus link-like'></i>
-    </span>
   </td>
 
   <td class='item-rating'>
