--- a/src/templates/view-permissions.html
+++ b/src/templates/view-permissions.html
@@ -6,7 +6,7 @@
     <i class='fas fa-fw fa-square-plus fa-2x'></i>
   </div>
 {% endif %}
-<div class='vertical-separator'></div>
+<div class='vertical-separator mx-3'></div>
 <div id='{{ rw }}Div'>
   {{ can.base }}
   {% if can.teams %}
