--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -78,15 +78,15 @@
     </div>
   </a>
 
-  <div class='vertical-separator'></div>
+  <div class='vertical-separator mx-3'></div>
 
-  <a class='mr-3' title='{{ 'View mode'|trans }}' href='?mode=view&id={{ Entity.id }}'>
+  <a class='mr-2' title='{{ 'View mode'|trans }}' href='?mode=view&id={{ Entity.id }}'>
     <div class='hl-hover-gray p-2 rounded'>
       <i class='fas fa-eye fa-fw'></i>
     </div>
   </a>
 
-  <div class='mr-3'>
+  <div class='mr-2'>
     <div title='{{ 'Save'|trans }}' data-action='update-entity-body' class='hl-hover-gray p-2 rounded'>
       <i class='fas fa-floppy-disk fa-fw'></i>
     </div>
@@ -94,7 +94,7 @@
 
   <div class='ml-auto d-flex'>
     <!-- TOGGLE PIN -->
-    <div data-action='toggle-pin' title='{{ 'Toggle pin'|trans }}' id='toggle-pin-icon-div' class='hl-hover-gray p-2 px-3 rounded mr-3'>
+    <div data-action='toggle-pin' title='{{ 'Toggle pin'|trans }}' id='toggle-pin-icon-div' class='hl-hover-gray p-2 px-3 rounded mr-2'>
       <i id='toggle-pin-icon' class='fas fa-thumbtack {{ Entity.Pins.isPinned ? '' : 'color-weak' }}'></i>
     </div>
 
