fix category change color button

--- a/src/templates/view-edit-toolbar.html
+++ b/src/templates/view-edit-toolbar.html
@@ -180,3 +180,8 @@
 </div>
 
 <hr>
+
+<!-- show message if we are not owner -->
+{% if Entity.entityData.userid != Entity.Users.userData.userid %}
+  {{ 'Owned by %s'|trans|format(Entity.entityData.fullname)|msg('ok', false) }}
+{% endif %}
